Change position navigation

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,8 @@ section {
 
 /* Navigation */
 nav {
-  padding-bottom: 12px;
+  text-align: right;
   padding-top: 25px;
-  padding-left: 20px;
 }
 nav ul {
   padding: 0px;
@@ -47,7 +46,7 @@ nav ul li a:hover {
 .splash {
   height: 100vh;
   position: relative;
-  background-image: url("https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1600");
+  background-image: url("https://images.pexels.com/photos/2191606/pexels-photo-2191606.jpeg?auto=compress&cs=tinysrgb&w=1600");
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
