--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,66 +1,111 @@
 /* Global */
-
 *, *::before, *::after {
     box-sizing: border-box;
-}
-
-body {
+  }
+  
+  body {
     margin: 0;
-}
-.container {
+    font-family: 'Nunito', sans-serif;
+  }
+  
+  .container {
     width: 1140px;
     padding: 0 20px;
     margin: 0 auto;
-}
-section {
+  }
+  
+  section {
     padding-left: 20px;
     padding-top: 96px;
     padding-bottom: 96px;
-}
-
-/* Navigation */
-
-nav {
+  }
+  
+  /* Navigation */
+  nav {
     padding-bottom: 12px;
     padding-top: 25px;
     padding-left: 20px;
-    
-    ul {
-        padding: 0px;
-        margin: 0px;
-        list-style-type: none;
-        
-        li {
-            display: inline-block;
-            margin-right: 36px;
-            position: relative;
-            
-            a {
-                text-decoration: none;
-                color: white;
-                &:hover {
-                    color: red;
-                }
-            }
-        }
-    }
-}
-
-/* Splash */
-
-.splash {
+    text-align: right;
+  }
+  nav ul {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+  }
+  nav ul li {
+    display: inline-block;
+    margin-right: 36px;
+    position: relative;
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: white;
+  }
+  nav ul li a:hover {
+    color: gold;
+  }
+  
+  /* Splash */
+  .splash {
     height: 100vh;
     position: relative;
-    background-image: url('https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1600');
+    background-image: url("https://images.pexels.com/photos/696407/pexels-photo-696407.jpeg?auto=compress&cs=tinysrgb&w=1600");
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-}
-
-.splash-inner {
+    text-align: center;
+    color: white;
+  }
+  
+  .splash-inner {
     position: absolute;
     width: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%);
+  }
+  
+  .page-title {
+    font-size: 50px;
+    padding: 0;
+    font-family: 'Dancing Script', cursive;
+  }
+  
+  .page-subtitle {
+    font-size: 80px;
+    padding: 0;
+  }
+  
+  /* BTN */
+  
+  .btn {
+    display: inline-block;
+    min-width: 250px;
+    padding: 16px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-width: 2px;
+    border-style: solid;
+    transition: all 1s;
+    background-color: gold;
+  }
+  
+  .btn:hover {
+    background-position: 0 100%;
+    color: white;
+  }
+  .btn-one {
+    border-color: gold;
+    color: white;
+    transition: all 1s;
+    background-image: linear-gradient(90deg, #ffffff 50%, transparent 50%);
+    background-position: 100% 0;
+    background-size: 300%;
+  }
+  .btn-one:hover {
+    background-position: 0 100%;
+    color: gold;
+  }
